Added more objects and some other things in views

--- a/WpfAppHelix3D.csproj
+++ b/WpfAppHelix3D.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove=".gitignore" />
+    <None Remove="LICENSE" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="HelixToolkit.Wpf" Version="2.24.0" />
   </ItemGroup>
